pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-073-atx_headings.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/073-atx_headings.md
---
]1337;SetMark\[1m[36m── [0m[1m[36mfoo[0m
